# hyprwayland-scanner

./: CMakeLists.txt  README.md  flake.nix  hyprwayland-scanner-config.cmake.in  hyprwayland-scanner.pc.in
.github/workflows/: nix.yml
nix/: default.nix  overlays.nix
src/: main.cpp
